fix alignments for Hero Component

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -5,7 +5,8 @@
   display: flex;
   justify-content: space-between;
   height: 100vh;
-  padding-right: 90px;
+  max-width: 1140px;
+  margin: 0 auto;
 
   @include respond-to(lg) {
     flex-direction: column;
@@ -32,12 +33,8 @@
     &-content {
       width: 70%;
 
-      @include respond-to(lg) {
-        width: 60%;
-      }
-
       @include respond-to(sm) {
-        width: 85%;
+        width: 100%;
       }
 
       
@@ -47,6 +44,12 @@
   &-socials {
     display: flex;
     gap: 1rem;
+    width: 100%;
+    padding-bottom: 2rem;
+
+    @include respond-to(lg) {
+        width: fit-content;
+      }
 
     i {
       font-size: 2rem;
@@ -86,7 +89,6 @@
     height: 100%;
     width: 40%;
     background-color: #232b36c2;
-    padding: 0 0 50px 150px;
 
     @include respond-to(lg) {
         flex-direction: column;
@@ -189,5 +191,24 @@
         background-color: transparent;
       }
     }
+  }
+}
+
+.hero-container {
+  display: flex;
+  width: 100%;
+}
+
+.hero-left, .hero-right {
+  flex-grow: 1;
+  min-width: 50px;
+  height: 100vh;
+}
+
+.hero-left {
+  background-color: #232b36c2;
+
+  @include respond-to(lg) {
+    background-color: transparent;
   }
 }
