--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,13 +6,12 @@
 .main-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
   position: relative;
   min-width: 430px;
-  padding: 0 50px;
 }
 
-.main-container section:not(:first-of-type) {
-    max-width: 1140px;
-    margin: 0 auto;
-  }
+.main-container > section:nth-of-type(n+2) {
+  max-width: 1140px;
+  margin: 0 50px;
+}
